[[bin]]
name = "pt"
path = "src/main.rs"

[package]
name = "pt-cli"
version = "1.0.32"
edition = "2021"
authors = [ "Hadi Cahyadi <cumulus13@gmail.com>",]
description = "Production-hardened clipboard-to-file tool with smart version management"
license = "MIT"
repository = "https://github.com/cumulus13/pt.git"
readme = "README.md"
keywords = [ "clipboard", "cli", "paste", "tool", "file",]
categories = [ "command-line-utilities",]

[dependencies]
dunce = "1.0"
copypasta = "0.10"
serde_json = "1.0"
serde_yaml = "0.9"
walkdir = "2.4"
regex = "1.10"
rand = "0.8"
dirs = "5.0"

[dependencies.clap]
version = "4.5"
features = [ "derive", "cargo",]

[dependencies.serde]
version = "1.0"
features = [ "derive",]

[dependencies.chrono]
version = "0.4"
features = [ "serde",]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
